--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -27,10 +27,10 @@ body {
   padding-inline: 2rem;
   border-radius: 1rem;
   box-shadow: 0.5rem 0.5rem 2rem hsl(211, 68%, 94%);
+  overflow: auto;
 }
 @media (max-width: 500px) {
   .main-nt-wrapper {
-    max-height: 100%;
     max-width: 400px;
     padding-inline: 1rem;
   }
